# anniedirt

./: CMakeLists.txt  build commands  g4annie_dirt_flux.cc  run_annie_g4dirt_newgenie.sh  submission commands
include/: G4PhysListRegisterOld.icc
src/: MyEventRecord.cc  N03PhysicsList.cc  PrimaryGeneratorAction.cc
